Simplify wiki sections to standalone history
